...

@Composable
fun SearchUser(modifier: Modifier, userListViewModel: UserListViewModel) {
    val text by userListViewModel.currentQuery.collectAsState()
    Row() {
        OutlinedTextField(
            modifier = modifier.fillMaxWidth().testTag("field"),
            value = text,
            singleLine = true,
            onValueChange = { newText ->
                userListViewModel.currentQuery.value = newText
            },
            label = {
...
